2009-09-01  Roland McGrath  <roland@redhat.com>

	* c++/subr.hh (subr::sharing_stack): New template class.
	* c++/dwarf (dwarf::debug_info_entry::children_type::const_iterator):
	Use it in place fo std::stack.

2009-08-31  Roland McGrath  <roland@redhat.com>

	* c++/subr.hh (subr::dynamic_equality_set): New template class.
	* c++/dwarf_output (dwarf_output_collector): Use it for _m_attr_sets.

2009-08-27  Roland McGrath  <roland@redhat.com>

	* c++/dwarf_output (dwarf_output::dwarf_output): Add a variant with a
	user-supplied copier, reimplement the collector-only version.
	(dwarf_output::copier): New constructors and destructor public.

	* c++/dwarf_output (dwarf_output::copier::seen::promote_pending):
	Notice circularity inside resolve_refs.

2009-08-25  Roland McGrath  <roland@redhat.com>

	* c++/dwarf_tracker: Soup up circular reference handling to handle
	mismatched duplication vs sharing in semantically matching trees.
	* c++/dwarf_comparator: Update user.

2009-08-21  Roland McGrath  <roland@redhat.com>

	* c++/subr.hh (hash<std::string>): Use elf_gnu_hash algorithm.

	* c++/dwarf (dwarf::source_file::identity): New method.
	* c++/dwarf_data (dwarf_data::source_file::identity): Likewise.
	* c++/dwarf_output (dwarf_output::copier): Cache input string
	and source file pointers to short-circuit repeated full hashconsing.

2009-08-20  Roland McGrath  <roland@redhat.com>

	* c++/values.cc (value_string): Fix constant-block case.

	* c++/dwarf_comparator: Use tracker::subtracker for subcomparator.
	Let mismatch hooks return bool that is true to keep comparing.
	* c++/dwarf_tracker: Define subtracker.

2009-08-19  Roland McGrath  <roland@redhat.com>

	* c++/dwarf_tracker: Revamp derived tracker logic.
	* c++/dwarf_comparator: Update user.

	* c++/subr.hh (wrapped_input_iterator::base): New method.
	(nothing): Kill operator (), really just nothing here.
	(create_container): Replace post-set hook with setter hook.
	(is): New callable template.