@@ -1,5 +1,7 @@
 2009-09-01  Roland McGrath  <roland@redhat.com>
 
+	* c++/dwarf_tracker (dwarf_path_finder): Use subr::sharing_stack.
+
 	* c++/subr.hh (subr::sharing_stack): New template class.
 	* c++/dwarf (dwarf::debug_info_entry::children_type::const_iterator):
 	Use it in place fo std::stack.
